# gpt3-blog-title-optimizer

./: .gitignore  count_results.sh  finetune.py  finetune.sh  gpt3_input_data.sql  gpt3_title_optimizer_demo.ipynb  gpt3_title_optimizer_walkthrough.ipynb  pyproject.toml  run_query.py  split_output.py
.ipynb_checkpoints/: gpt3_title_optimizer_demo-checkpoint.ipynb
